<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ac阅读</string>
    <string name="app_profile">账号信息</string>
    <string name="app_imageview">浏览图片</string>
    <string name="app_quote">浏览盖楼</string>
    <string name="app_clear">清空</string>
    <string name="app_os_too_old">系统版本过低，不支持此功能！</string>

    <string name="app_cancel">取消</string>
    <string name="app_dropdown">▼</string>
    <string name="app_exit">再按一次返回键退出</string>
    <string name="app_login">登录</string>
    <string name="app_logout">注销</string>
    <string name="app_ok">确定</string>
    <string name="app_reset">重置</string>
    <string name="app_search">搜索</string>

    <string name="app_cannotread_cache">无法访问缓存目录！</string>

    <string name="about_info">Ac阅读是专门设计用于浏览AcFun网站文章区的客户端，以简洁、易用为主，同时拥有强大的评论功能。\n\n该客户端为个人作品，专门为优化使用体验和研究开发技术而制作。</string>
    <string name="about_author">by Harreke</string>
    <string name="about_thanks">特别感谢</string>
    <string name="about_list">创意指导：辰音奈奈</string>

    <string name="channel_misc">综合</string>
    <string name="channel_work_emotion">工作\n情感</string>
    <string name="channel_dramaculture">动漫\n文化</string>
    <string name="channel_comic_novel">漫画\n轻小说</string>

    <string name="channel_search">输入AC号或关键字</string>

    <string name="comic_save">保存图片</string>
    <string name="comic_save_downloading">正在保存图片</string>
    <string name="comic_save_empty">文件名为空</string>
    <string name="comic_save_failure">图片保存失败</string>
    <string name="comic_save_illegal">文件名包含非法字符</string>
    <string name="comic_save_input">请输入文件名</string>
    <string name="comic_save_overwrite">已有同名文件存在，确认覆盖？</string>
    <string name="comic_save_success">图片保存保存至%s</string>

    <string name="comment_date">发表于%s</string>
    <string name="comment_text">评论内容</string>
    <string name="comment_username"># 评论者</string>

    <string name="comment_quote_expand">点击查看所有%s层楼</string>
    <string name="comment_quote_repeat">重复引用已隐藏</string>
    <string name="comment_quote_text">引用内容</string>
    <string name="comment_quote_user_name"># 引用者</string>

    <string name="comment_onlyemot">禁止发布纯表情评论！</string>
    <string name="comment_pager_title">第%s页</string>
    <string name="comment_send">发送评论</string>
    <string name="comment_sending">正在发送评论 …</string>
    <string name="comment_success">评论发送成功，请等待服务器刷新评论缓存！</string>
    <string name="comment_failure">评论发送失败，请检查网络连接！</string>
    <string name="comment_tooshort">评论字数少于5个，请重新输入！</string>

    <string name="comment_select">已选中%s楼</string>
    <string name="comment_reply">回复该楼</string>

    <string name="content_comments">评论</string>
    <string name="content_date">MM月dd日（E）HH时mm分</string>
    <string name="content_description">简介</string>
    <string name="content_id">AC号</string>
    <string name="content_info">/ %1$s条评论 / %2$s人围观</string>
    <string name="content_title">标题</string>

    <string name="content_redirect">检测到链接%s</string>
    <string name="content_redirect_jump">跳转</string>
    <string name="content_redirect_ac">该链接指向投稿 ac%s，确认跳转？</string>
    <string name="content_redirect_aa">该链接指向合辑 ac%s，请使用视频客户端浏览</string>

    <string name="favourite_add">添加收藏</string>
    <string name="favourite_add_success">成功添加收藏！</string>
    <string name="favourite_add_failure">添加收藏失败！</string>
    <string name="favourite_remove">移除收藏</string>
    <string name="favourite_remove_success">成功移除收藏！</string>
    <string name="favourite_remove_failure">移除收藏失败！</string>
    <string name="favourite_operating">正在操作中 …</string>

    <string name="history_clear">确认清空浏览记录？</string>

    <string name="login_account">账号</string>
    <string name="login_progress">正在登录 …</string>
    <string name="login_account_tooshort">账号过短！</string>
    <string name="login_account_toolong">账号过长！</string>
    <string name="login_denied">账号或密码不符，请重试！</string>
    <string name="login_password">密码</string>
    <string name="login_password_tooshort">密码过短！</string>
    <string name="login_password_toolong">密码过长！</string>
    <string name="login_required">请先登录</string>
    <string name="login_expired">身份验证过期，请重新登录</string>
    <string name="login_unauthorized">未进行身份验证，请登录</string>
    <string name="login_remember">记住账号</string>
    <string name="login_success">登录成功</string>
    <string name="login_timeout">登录超时，请重试！</string>

    <string name="logout_sure">确认注销？</string>

    <string name="mail_new">new</string>

    <string name="main_channel">频道</string>
    <string name="main_recommend">推荐</string>

    <string name="menu_at">有人召唤</string>
    <string name="menu_favourite">收藏稿件</string>
    <string name="menu_history">浏览记录</string>
    <string name="menu_mail">站内私信</string>
    <string name="menu_pattern_day">白天</string>
    <string name="menu_pattern_night">夜间</string>
    <string name="menu_setting">设置</string>

    <string name="empty"/>

    <string name="quote_title">浏览引用</string>

    <string name="recommend_date">yyyy年MM月dd日</string>

    <string name="reply_id">回复</string>
    <string name="reply_id_quote">引用 %s</string>
    <string name="reply_color">A</string>
    <string name="reply_size">16</string>
    <string name="reply_input">输入评论内容</string>

    <string name="reply_pickcolor">选择颜色</string>
    <string name="reply_picksize">选择字号</string>

    <string name="search_sort">结果排序</string>
    <string name="search_sort_indicator">相关度</string>
    <string name="search_range">搜索范围</string>
    <string name="search_range_indicator">所有分区</string>
    <string name="search_target">搜索项目</string>
    <string name="search_target_indicator">标题和标签</string>

    <string name="search_tooshort">关键字过短，请重新输入！</string>

    <string name="setting_about">关于</string>
    <string name="setting_autoloadimage">移动网络加载图片</string>
    <string name="setting_maxquotecount">评论最大楼层</string>
    <string name="setting_maxquotecount_toosmall">楼层过低！</string>
    <string name="setting_maxquotecount_toobig">楼层过高可能影响性能！</string>
    <string name="setting_misc">综合</string>
    <string name="setting_other">其他</string>
    <string name="setting_restoredefault">恢复默认设置</string>
    <string name="setting_restoredefault_ask">确认恢复默认设置？</string>
    <string name="setting_textfont">界面字体</string>
    <string name="setting_textfont_default">系统默认字体</string>
    <string name="setting_textsize">评论默认字号</string>

    <string name="share_title">分享</string>
    <string name="share_content">我从%1$s分享了视频“%2$s”（UP主：%3$s，链接：%4$s）</string>

    <string name="time">E </string>
    <string name="time_early">清晨</string>
    <string name="time_morning">上午</string>
    <string name="time_noon">中午</string>
    <string name="time_afternoon">上午</string>
    <string name="time_nightfall">傍晚</string>
    <string name="time_evening">夜晚</string>
    <string name="time_night">深夜</string>

    <string name="user_basics">基本信息</string>
    <string name="user_extras">扩展信息</string>
    <string name="user_options">相关操作</string>
    <string name="user_name">用户名</string>
    <string name="user_id">ID</string>
    <string name="user_signature">签名</string>
    <string name="user_gender">性别</string>
    <string name="user_gender_male">男</string>
    <string name="user_gender_female_refer">她</string>
    <string name="user_location">地址</string>
    <string name="user_phone">手机</string>
    <string name="user_qq">QQ</string>
    <string name="user_unknown">未公开</string>

    <string name="user_refer_mine">我</string>
    <string name="user_refer_male">他</string>
    <string name="user_refer_female">女</string>
    <string name="user_refer_unknown">TA</string>

    <string name="user_contributes">%s的投稿</string>
    <string name="user_chats">与%s交流</string>
    <string name="app_splash">简约 潮流 创意</string>

</resources>
