<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/mm.v"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        layout="@layout/widget_toolbar"/>

    <LinearLayout
        android:id="@+id/search_handler"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/search_sort"
            style="@style/mmw.v"
            android:gravity="center">

            <TextView
                style="@style/mw"
                android:gravity="center"
                android:text="@string/search_sort"
                android:textColor="@color/White"
                android:textSize="@dimen/Subhead"/>

            <TextView
                android:id="@+id/search_sort_indicator"
                style="@style/ww"
                android:layout_marginTop="4dp"
                android:text="@string/search_sort_indicator"
                android:textColor="@color/White"
                android:textSize="@dimen/Caption"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_range"
            style="@style/mmw.v"
            android:gravity="center">

            <TextView
                style="@style/mw"
                android:gravity="center"
                android:text="@string/search_range"
                android:textColor="@color/White"
                android:textSize="@dimen/Subhead"/>

            <TextView
                android:id="@+id/search_range_indicator"
                style="@style/ww"
                android:layout_marginTop="4dp"
                android:text="@string/search_range_indicator"
                android:textColor="@color/White"
                android:textSize="@dimen/Caption"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_target"
            style="@style/mmw.v"
            android:gravity="center">

            <TextView
                style="@style/mw"
                android:gravity="center"
                android:text="@string/search_target"
                android:textColor="@color/White"
                android:textSize="@dimen/Subhead"/>

            <TextView
                android:id="@+id/search_target_indicator"
                style="@style/ww"
                android:layout_marginTop="4dp"
                android:text="@string/search_target_indicator"
                android:textColor="@color/White"
                android:textSize="@dimen/Caption"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        style="@style/mm">

        <include
            layout="@layout/widget_recycler_pullable"/>

        <include
            layout="@layout/widget_toolbar_shadow"/>

    </FrameLayout>

</LinearLayout>