<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/mw.v"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/White"
    android:padding="8dp">

    <LinearLayout
        style="@style/mw.h"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/recommend_number"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/shape_circle_1st"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/White"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/recommend_channel"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/channel_misc"
            android:textColor="@color/Selection_1st"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
        style="@style/mw.v"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/recommend_title"
            style="@style/mw"
            android:text="@string/content_title"
            android:textColor="@color/Title"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/recommend_description"
            style="@style/mw"
            android:layout_marginTop="8dp"
            android:text="@string/content_description"
            android:textColor="@color/Content"
            android:textSize="12dp"/>

    </LinearLayout>

</LinearLayout>