<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/mm.v"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <include
        layout="@layout/widget_toolbar"/>

    <FrameLayout
        style="@style/mm">

        <LinearLayout
            style="@style/mm.v"
            android:padding="8dp">

            <TextView
                style="@style/ww"
                android:padding="16dp"
                android:text="@string/setting_misc"
                android:textAppearance="@style/Caption"/>

            <android.support.v7.widget.CardView
                style="@style/mw">

                <LinearLayout
                    style="@style/mw.v">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/setting_autoloadimage"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/setting_autoloadimage"
                        android:textAppearance="@style/Subhead"/>

                    <include
                        layout="@layout/widget_divider_horizontal"/>

                    <LinearLayout
                        android:id="@+id/setting_maxquotecount"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/mmw"
                            android:gravity="center_vertical"
                            android:padding="16dp"
                            android:text="@string/setting_maxquotecount"
                            android:textAppearance="@style/Subhead"/>

                        <EditText
                            android:id="@+id/setting_maxquotecount_edittext"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textAppearance="@style/Body1"/>

                        <ImageView
                            android:id="@+id/setting_maxquotecount_ok"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:padding="16dp"
                            android:src="@drawable/image_ok"
                            android:visibility="gone"/>

                    </LinearLayout>

                    <include
                        layout="@layout/widget_divider_horizontal"/>

                    <LinearLayout
                        android:id="@+id/setting_textsize"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/mmw"
                            android:gravity="center_vertical"
                            android:padding="16dp"
                            android:text="@string/setting_textsize"
                            android:textAppearance="@style/Subhead"/>

                        <Spinner
                            android:id="@+id/setting_textsize_spinner"
                            android:layout_width="64dp"
                            android:layout_height="match_parent"
                            android:entries="@array/comment_text_size"
                            android:padding="16dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/White"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            style="@style/mmw"
                            android:gravity="center_vertical"
                            android:padding="8dp"
                            android:text="@string/setting_textfont"
                            android:textAppearance="@style/Subhead"/>

                        <Spinner
                            android:id="@+id/setting_textfont"
                            android:layout_width="180dp"
                            android:layout_height="match_parent"
                            android:padding="8dp"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                style="@style/ww"
                android:padding="16dp"
                android:text="@string/setting_other"
                android:textAppearance="@style/Caption"/>

            <android.support.v7.widget.CardView
                style="@style/mw">

                <LinearLayout
                    style="@style/mw.v">

                    <TextView
                        android:id="@+id/setting_restoredefault"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/setting_restoredefault"
                        android:textAppearance="@style/Subhead"/>

                    <include
                        layout="@layout/widget_divider_horizontal"/>

                    <TextView
                        android:id="@+id/setting_about"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/setting_about"
                        android:textAppearance="@style/Subhead"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <include
            layout="@layout/widget_toolbar_shadow"/>

    </FrameLayout>

</LinearLayout>